[package]
name = "qBitThrottler"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["json"] }
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
tokio-macros = "2.3.0"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
dotenv = "0.15.0"